--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,14 @@ body {
   margin: 0;
   background-color: black;
 }
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
