--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,6 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+.bordebasico {
+  border: 0.5px solid #e0e0e0;
+}
